- Simplified the Context: removed the ContextFactory classes, leaving just the
  Context classes and the AgentFactory. In the configuration file,
  a Context class must be specified and not a ContextFactory.
- Configuration of agent classes changed from an array agent.classes[] to
  an array agents[], where each agent can have properties class (required), 
  thread_safe, and stateful.


2012-09-18, version 0.10.0

- The web interface of the agents now has an option to enable/disable logging
  events using a LogAgent.
- Fixed some minor bugs in error reporting in the agents web interface.


2012-09-10, version 0.9.1

- Fixed: Context did not load an agents context with a case insensitive 
  className.


2012-09-07, version 0.9

- Created a record logger to log requests to agents. Not yet in use though.
- AgentFactory created which allows for local creation/invocation of agents.
- JSON-RPC requests are routed via the agents context, which is now capable
  of routing requests to local agents locally, instead of sending a
  regular HTTP POST request.


2012-08-22, version 0.8

- Event callbacks (fired via "trigger") are now send asynchronously to all
  subscribers. This allows for sending all callbacks in parallel, and 
  prevents any of the subscribers blocking the trigger method. 
- Fixed a bug in the agent interface, not displaying responses with a boolean
  result with value false.


2012-08-03, version 0.7

- Added a convenience method send(url, method, params, type) to the JSONRPC 
  class
- Fixed the SingleAgentServlet, which now works correctly with the multiple
  resources for the web page of an agent.


2012-07-03, version 0.6

- Updated agents web interface
- Added JSON-RPC class validation
- Changed the Context: it now extends Map, which allows for better/easier Java
  integration.
- FileContext created. Stores agents data on disk.
- Agents interface improved: methods-form now handles parameter types correctly.