@@ -3,20 +3,18 @@
 # environment settings
 environment:
   Development:
-    servlet_url: http://localhost:8080/EveCore/agents  # TODO: be able to leave servlet_url undefined
     messenger:
       class: com.almende.eve.messenger.XMPPMessenger
-      host: ec2-54-246-24-74.eu-west-1.compute.amazonaws.com
+      host: ec2-54-246-112-19.eu-west-1.compute.amazonaws.com
       port: 5222
-      # service: ec2-54-246-24-74.eu-west-1.compute.amazonaws.com
-
+      # service:
+      
   Production:
-    servlet_url: http://localhost:8080/EveCore/agents  # TODO: be able to leave servlet_url undefined
     messenger:
       class: com.almende.eve.messenger.XMPPMessenger
-      host: ec2-54-246-24-74.eu-west-1.compute.amazonaws.com
+      host: ec2-54-246-112-19.eu-west-1.compute.amazonaws.com
       port: 5222
-      #service: ec2-54-246-24-74.eu-west-1.compute.amazonaws.com
+      # service: 
 
 agents:
   - class: com.almende.eve.agent.example.TestAgent
