@@ -3,10 +3,10 @@
 # environment settings
 environment:
   Development:
-    servlet_url: http://localhost:8080/EvePlanning/agents
+    agent_url: http://localhost:8080/EvePlanning/agents/:class/:id/:resource
     auth_google_servlet_url: http://localhost:8080/EvePlanning/auth/google
   Production:
-    servlet_url: http://localhost:8080/EvePlanning/agents
+    agent_url: http://localhost:8080/EvePlanning/agents/:class/:id/:resource
     auth_google_servlet_url: http://localhost:8080/EvePlanning/auth/google
 
 # agent settings
